--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
   
   <!-- Section where the "Add Quote" form will be dynamically created -->
   <div id="addQuoteSection"></div>
+
+  <div>
+    <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
+    <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
+    <button onclick="addQuote()">Add Quote</button>
+  </div>
+  
   
   <script src="script.js"></script>
 </body>
