--- a/index.html
+++ b/index.html
@@ -4,26 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dynamic Quote Generator</title>
-  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Dynamic Quote Generator</h1>
-  <!-- Placeholder to display the quotes -->
   <div id="quoteDisplay"></div>
-  
-  <!-- Button to show a new random quote -->
   <button id="newQuote">Show New Quote</button>
-  
-  <!-- Section where the "Add Quote" form will be dynamically created -->
-  <div id="addQuoteSection"></div>
-
   <div>
     <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
     <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
-    <button onclick="addQuote()">Add Quote</button>
+    <button id="addQuoteBtn">Add Quote</button>
   </div>
-  
-  
   <script src="script.js"></script>
 </body>
 </html>
