--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dynamic Quote Generator</title>
   <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
   <h1>Dynamic Quote Generator</h1>
+  
+  <!-- Category Filter Dropdown -->
+  <select id="categoryFilter" onchange="filterQuotes()">
+    <option value="all">All Categories</option>
+  </select>
+  
+  <!-- Quote Display Area -->
   <div id="quoteDisplay"></div>
+  
+  <!-- Button to show a new random quote -->
   <button id="newQuote">Show New Quote</button>
-  <div>
-    <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
-    <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
-    <button id="addQuoteBtn">Add Quote</button>
-  </div>
+  
   <script src="script.js"></script>
 </body>
 </html>
